--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
     margin-left: 15px;
 }
 .hero-section {
-    background: url('./Images/tst.jpg') no-repeat center center;
+    background: url('./Components/Images/logo.jpg') no-repeat center center;
     background-size: cover;
     padding: 50px 0;
     text-align: center;
