--- a/src/Components/Header/Nav.css
+++ b/src/Components/Header/Nav.css
@@ -6,8 +6,9 @@
     margin-right: 0;
 }
 .navbar-brand {
-    font-size: 24px;
+    font-size: 28px;
     font-family: 'Times New Roman', serif;
+    padding-left: 5%;
 }
 .navbar {
     padding: 0.5rem 1rem;
