--- a/src/Components/Login-Register/Login.css
+++ b/src/Components/Login-Register/Login.css
@@ -37,8 +37,7 @@
     width: 102%;
     height: 101%;
     border-radius: 10px;
-    /* background-image: linear-gradient(var(--rotate), #e5e4e2, #a9a9a9, #dcdcdc); */
-    background-image: linear-gradient(var(--rotate),#5ddcff,#3c67e3 43%, #8a2be2);
+    background-image: linear-gradient(var(--rotate)#ffd700, #ffa500);
     position: absolute;
     z-index: -1;
     top: -0.5%;
@@ -58,8 +57,7 @@
     margin: 0 auto;
     transform: scale(0.8);
     filter: blur(calc(var(--card-height)/6));
-    /* background-image: linear-gradient(var(--rotate), #e5e4e2, #a9a9a9, #dcdcdc); */
-    background-image: linear-gradient(var(--rotate),#5ddcff,#3c67e3 43%, #8a2be2);
+    background-image: linear-gradient(var(--rotate)#ffd700, #ffa500);
     opacity: 1;
     transition: opacity 0.5s;
     animation: spin 2.5s linear infinite;
@@ -69,7 +67,7 @@
     pointer-events: none;
     margin: 0 0 30px;
     padding-top: 10px;
-    color: #778899;
+    color: whitesmoke;
     text-align: center;
 }
 
@@ -104,7 +102,6 @@
     cursor: pointer;
     border-radius: 6px;
     font-weight: bold;
-    box-shadow: 0 0 10px #3c67e3;
     transition-duration: 0.5s;
     transition-property: box-shadow, transform;
 }
@@ -113,7 +110,6 @@
 .lgn-btn:focus,
 .lgn-btn:active {
     transform: scale(1.1);
-    box-shadow: 0 0 20px #3c67e3;
 }
 
 
@@ -148,7 +144,6 @@
     position: relative;
     margin: 6% auto;
     margin-top: 30px;
-    /* border: 3px whitesmoke solid; */
     border-radius: 10px;
     padding: 5px;
     background-color: black;
@@ -212,8 +207,7 @@
     width: 102%;
     height: 101%;
     border-radius: 10px;
-    /* background-image: linear-gradient(var(--rotate), #e5e4e2, #a9a9a9, #dcdcdc); */
-    background-image: linear-gradient(var(--rotate),#5ddcff,#3c67e3 43%, #8a2be2);
+    background-image: linear-gradient(var(--rotate)#ffd700, #ffa500);
     position: absolute;
     z-index: -1;
     top: -0.5%;
@@ -233,8 +227,6 @@
     margin: 0 auto;
     transform: scale(0.8);
     filter: blur(calc(var(--card-height)/6));
-    /* background-image: linear-gradient(var(--rotate), #e5e4e2, #a9a9a9, #dcdcdc); */
-    background-image: linear-gradient(var(--rotate),#5ddcff,#3c67e3 43%, #8a2be2);
     opacity: 1;
     transition: opacity 0.5s;
     animation: spin 2.5s linear infinite;
@@ -293,7 +285,6 @@
     cursor: pointer;
     border-radius: 6px;
     font-weight: bold;
-    box-shadow: 0 0 10px #3c67e3;
     transition-duration: 0.5s;
     transition-property: box-shadow, transform;
 }
@@ -302,7 +293,6 @@
 .reg-btn:focus,
 .reg-btn:active {
     transform: scale(1.1);
-    box-shadow: 0 0 20px #3c67e3;
 }
 
 @keyframes spin {
