--- a/src/Components/Shopping/Items.css
+++ b/src/Components/Shopping/Items.css
@@ -1,44 +1,77 @@
-.card-img-top {
+.Itms .card-img-top {
     width: 100%;
     height: auto;
 }
 
-.card {
+.Itms .card {
     position: relative;
     border: none;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: rgb(0, 0, 0);
 }
 
-.card-body {
+.Itms .card-body {
     text-align: center;
     padding: 20px;
 }
 
-.badge {
+.Itms .badge {
+    font-size: 1rem;
     position: absolute;
-    top: 10px;
-    left: 10px;
-    background-color: rgba(0, 0, 0, 0.7);
+    top: 3%;
+    left: 2%;
+    background-color: rgba(104, 104, 104, 0.6);
     color: white;
 }
 
-.breadcrumb a {
+.Itms .breadcrumb a {
     text-decoration: none;
     color: #555;
 }
 
-.breadcrumb a:hover {
+.Itms .breadcrumb a:hover {
     color: #000;
 }
 
-.form-check-label {
+.Itms .form-check-label {
     cursor: pointer;
 }
 
-.pagination .page-link {
+.Itms .pagination .page-link {
     color: #000;
 }
 
-.pagination .page-link:hover {
+.Itms .pagination .page-link:hover {
     background-color: #ddd;
+}
+
+.Itms .card-icons {
+    position: absolute;
+    top: 3%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 10px;
+    font-size: larger;
+}
+
+.Itms .favorite-button, .cart-button {
+    color: white;
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.Itms .favorite-button {
+    position: absolute;
+    right: 15%;
+}
+
+.Itms .cart-button {
+    position: absolute;
+    right: 3%;
+}
+
+.Itms h5 {
+    color: white;
 }
