--- a/src/Components/Shopping/Items.css
+++ b/src/Components/Shopping/Items.css
@@ -6,8 +6,13 @@
 .Itms .card {
     position: relative;
     border: none;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    background-color: rgb(0, 0, 0);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
+    background-color: white;
+    transition: transform 0.5s ease; 
+}
+
+.Itms .card:hover {
+    transform: scale(1.05) translateY(-15px);
 }
 
 .Itms .card-body {
@@ -73,5 +78,5 @@
 }
 
 .Itms h5 {
-    color: white;
+    color: black;
 }
