--- a/src/Components/Login-Register/Login.css
+++ b/src/Components/Login-Register/Login.css
@@ -87,7 +87,14 @@
     color: white;
     background-color: black;
 }
-
+.error-message {
+    color: white;
+    background-color: red;
+    padding: 10px;
+    margin-top: 10px;
+    border-radius: 5px;
+    text-align: center;
+  }
 .lgn-btn {
     width: 150px;
     height: 40px;
