--- a/src/Components/Header/Nav.css
+++ b/src/Components/Header/Nav.css
@@ -6,19 +6,37 @@
     margin-right: 0;
 }
 .navbar-brand {
-    font-size: 28px;
-    font-family: 'Times New Roman', serif;
-    padding-left: 5%;
+    padding-left: 2%;
+    padding-top: 1%;
+}
+.navbar-brand img {
+    max-height: 150px;
+    width: 200px;
 }
 .navbar {
-    padding: 0.5rem 1rem;
+    padding: 0.9rem 1rem;
 }
-.sell-now-btn {
-    background-color: #b5853f;
-    color: white;
-    font-weight: bold;
-    margin-left: 15px;
+
+.navbar .search-bar {
+    width: 400px;
+    padding-right: 40px;
 }
+
+.navbar .search-icon {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 1;
+    color: #888;
+}
+
+.search-container {
+    position: relative;
+    width: 100%;
+}
+
+
 .dropdown-toggle.custom-dropdown {
     background-color: #B5853F;
     border-color: #B5853F;
@@ -37,7 +55,6 @@
 .dropdown-menu .dropdown-item {
     color: black;
 }
-
 .dropdown-menu .dropdown-item:hover,
 .dropdown-menu .dropdown-item:focus {
     background-color: #B5853F;
