--- a/src/Components/ShowProducts/product.css
+++ b/src/Components/ShowProducts/product.css
@@ -22,6 +22,19 @@
     font-weight: bold;
 }
 
+.product-table img.product-image {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+}
+
+.image-preview {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    margin-top: 10px;
+}
+
 .product-table button {
     padding: 5px 10px;
     border: none;
@@ -36,4 +49,21 @@
 .product-table h1 {
     text-align: center;
     color: #333;
+}
+
+.button-group {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.button-group button {
+    padding: 5px 10px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.button-group button:hover {
+    background-color: #ddd;
 }
