--- a/src/Components/favorites/Fav.css
+++ b/src/Components/favorites/Fav.css
@@ -1,28 +1,19 @@
-.small-card {
-width: 100%;
-max-width: 250px;
-/* margin: auto; */
-margin-top: 3%;
-margin-left: 7%;
-background-color: black;
+.favourites-container {
+    padding: 20px;
 }
 
-.small-card .card-img-top {
-width: 100%;
-height: 150px;
-object-fit: cover;
+.favourites-container h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 2rem;
 }
 
-.small-card .card-body {
-padding: 10px;
+.no-favorites {
+    text-align: center;
+    font-size: 1.5rem;
+    margin-top: 50px;
 }
 
-.small-card .card-title {
-font-size: 1rem;
-margin-bottom: 5px;
-}
-
-.small-card .btn {
-font-size: 0.875rem;
-padding: 5px 10px;
+.btn {
+    margin-top: 10px;
 }
