--- a/src/Components/Home/Brand.css
+++ b/src/Components/Home/Brand.css
@@ -3,8 +3,9 @@
     text-align: center;
 }
 .brand-section img {
-    width: 100%;
-    height: auto;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
 }
 .brand-section h5 {
     font-weight: bold;
