--- a/src/Components/ShoppingDetails/Items_details.css
+++ b/src/Components/ShoppingDetails/Items_details.css
@@ -3,12 +3,15 @@
   padding: 40px;
   border-radius: 12px;
   max-width: 1000px;
+  height: 40rem;
   margin: 50px auto;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 .product-detail-container .main-product-image {
   max-width: 100%;
+  height: 500px;
+  object-fit: cover;
   border-radius: 12px;
   transition: transform 0.3s ease;
 }
