--- a/src/Components/ShowOrderDetails/ShowOrderDetails.css
+++ b/src/Components/ShowOrderDetails/ShowOrderDetails.css
@@ -1,41 +1,5 @@
-.scroll-buttons {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 20px;
-}
-
-.scroll-container {
-    overflow-x: hidden;
-    white-space: nowrap;
-    margin: 0 10px;
-    width: 100%;
-}
-
-.image-row {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    width: max-content;
-}
-
-.image-container {
-    display: inline-block;
-    transition: transform 0.3s, opacity 0.3s;
-    opacity: 1;
-    position: relative;
-    transform: scale(1);
-    margin: 0 10px;
-}
-
-.product-image {
-    cursor: pointer;
-    max-width: 150px;
-}
-
-.main-product-image {
-    max-width: 100%;
-    height: auto;
+.showOrderDetails {
+    padding: 20px;
 }
 
 .product-detail-container {
@@ -45,4 +9,39 @@
 
 .description-container h3 {
     margin-right: 10px;
+}
+
+.image-slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    height: 400px;
+}
+
+.main-product-image {
+    max-width: 100%;
+    height: auto;
+    max-height: 100%;
+    margin: auto;
+}
+
+.slick-slider {
+    position: relative;
+}
+
+.slick-prev, .slick-next {
+    width: 40px;
+    height: 40px;
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.slick-prev:hover, .slick-next:hover {
+    background: rgba(0, 0, 0, 0.7);
 }
