--- a/src/Components/Cart/CartItem.css
+++ b/src/Components/Cart/CartItem.css
@@ -11,48 +11,85 @@
 }
 
 .item-image {
-    width: 60px;
-    height: 60px;
+    width: 80px;
+    height: 80px;
     object-fit: cover;
     margin-right: 10px;
 }
 
-.col1, .col2, .col3, .col4 {
+.item-name {
+    font-size: 1.25rem;
+    color: #333;
+}
+
+.item-price, .item-total {
+    font-size: 1.25rem;
+    color: #333;
+}
+
+.quantity-control {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.col1 {
-    flex: 2;
+.quantity-button {
+    width: 30px;
+    height: 30px;
+    border: 1px solid #ccc;
+    color: black;
+    background-color: #fff;
+    cursor: pointer;
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.col2, .col3, .col4 {
-    flex: 1;
+.quantity {
+    width: 30px;
+    text-align: center;
+    font-size: 1.25rem;
+    color: #333;
+    margin: 0 5px;
 }
 
 .remove-button {
+    background-color: transparent;
+    color: red;
+    border: none;
+    cursor: pointer;
+    font-size: 1rem;
     margin-left: 10px;
 }
 
-@media (max-width: 768px) { 
-    .cart-item {
+.remove-button:hover {
+    text-decoration: underline;
+}
+
+@media (max-width: 768px) {
+    .shopping-cart {
+        width: 100%;
+        padding: 10px;
+    }
+
+    .cart-header, .cart-item, .cart-total {
         flex-direction: column;
         align-items: flex-start;
     }
 
-    .col1, .col2, .col3, .col4 {
+    .cart-header h4, .cart-total h3 {
         width: 100%;
-        justify-content: space-between;
-        margin-bottom: 10px;
+        text-align: left;
     }
 
-    .item-info {
-        justify-content: space-between;
+    .item-info, .quantity-control {
         width: 100%;
+        justify-content: space-between;
     }
 
-    .remove-button {
-        margin-left: 0;
+    .item-image {
+        width: 60px;
+        height: 60px;
     }
 }
