--- a/src/Components/UserProducts/userDetails.css
+++ b/src/Components/UserProducts/userDetails.css
@@ -2,10 +2,12 @@
 .my-items {
     padding: 20px;
     font-family: Arial, sans-serif;
+    text-align: center;
   }
   
-  h1 {
+  .my-items h1 {
     font-size: 24px;
+    margin: 0 auto;
   }
   
   .tabs {
